--- a/cricket/templates/cricket/home_page.html
+++ b/cricket/templates/cricket/home_page.html
@@ -192,7 +192,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 <div class="w3-row-padding  w3-padding-64 w3-container">
   <div class="w3-content">
     <div class="w3-third w3-center">
-      <img class="rounded-circle" src="https://media.gettyimages.com/photos/boy-playing-cricket-picture-id172363874?s=612x612" alt="Generic placeholder image" width="300" height="300">
+      <img class="rounded-circle" src="././media/home_page/cricket_image11.jpg" alt="Generic placeholder image" width="300" height="300">
         <a href="{% url 'player_signup' %}"><button class="btn btn-secondary w3-padding-large w3-large w3-margin-top" style="width: 300px; background-color: lightgrey; color: black">SignUp</button></a>
     </div>
 
@@ -213,25 +213,25 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
     <p class="w3-opacity w3-center"><i>Any Queries? Drop a note!</i></p>
     <div class="w3-row w3-padding-32">
       <div class="w3-col m6 w3-large w3-margin-bottom">
-        <i class="fa fa-map-marker my-4" style="width:30px"></i> Mangalore, India<br>
+        <i class="fa fa-map-marker my-4" style="width:30px"></i> Bangalore, India<br>
         <i class="fa fa-phone my-4" style="width:30px"></i> Phone :<div class="row">
           <div class=" col-md-3">
 
           </div>
           <div class=" col-md-9">
-              +91 7348810539
+              +91 9876543219
           </div>
            <div class=" col-md-3">
 
           </div>
            <div class=" col-md-9    ">
-               +91 9901053788
+               +91 8987654321
           </div>
       </div >
-        <i class="fa fa-envelope my-4" style="width:30px"> </i> Email: &nbsp &nbsp cricky.Web@gmail.com<br>
+        <i class="fa fa-envelope my-4" style="width:30px"> </i> Email: &nbsp &nbsp cricky@gmail.com<br>
       </div>
       <div class="w3-col m6 my-4">
-        <form action="#" target="_blank">
+        <form action="#">
           <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
             <div class="w3-half">
               <input class="w3-input w3-border" type="text" placeholder="Name" required name="Name">
