--- a/organizer/templates/organizer/home.html
+++ b/organizer/templates/organizer/home.html
@@ -55,7 +55,7 @@
 
         <div class="col-lg-3 col-md-6 mb-4">
           <div class="card">
-            <img class="card-img-top" src="http://moziru.com/images/unknown-clipart-avatar-16.jpg" alt="">
+            {% comment %} <img class="card-img-top" id="organizer_profile" src="../../media/players/no.png" alt="Organizer"> {% endcomment %}
             <div class="card-body">
               <h4 class="card-title">Profile</h4>
               <p class="card-text"></p>
